# bleboard

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rollup.config.js
.github/: dependabot.yml
src/: index.js  keyboard.js  main.rs
src/ble/: constants.js  index.js
src/ble/characteristics/: batteryLevel.js  hidControlPoint.js  hidInformation.js  index.js  manufacturerName.js  modelNumber.js  protocolMode.js  report.js  reportMap.js  serialNumber.js
src/ble/descriptors/: characteristicPresentationFormat.js  characteristicUserDescription.js  clientCharacteristicConfiguration.js  index.js  reportReference.js
src/ble/lib/: deviceInfoMaxLengthCheck.js  reportMap.js
src/ble/services/: battery.js  deviceInfo.js  humanInterfaceDevice.js  index.js
src/gatt/: mod.rs
src/gatt/battery/: characteristic_battery_level.rs  descriptor_gatt_characteristic_presentation_format.rs  mod.rs  service_battery_service.rs
src/gatt/common/: descriptor_gatt_characteristic_user_description.rs  mod.rs
src/gatt/device_info/: characteristic_manufacturer_name_string.rs  characteristic_model_number_string.rs  characteristic_serial_number_string.rs  mod.rs  service_device_information.rs
src/gatt/keyboard/: characteristic_hid_control_point.rs  characteristic_hid_information.rs  characteristic_protocol_mode.rs  characteristic_report.rs  characteristic_report_map.rs  descriptor_report_reference.rs  mod.rs  report_map_value.rs  report_types.rs  service_human_interface_device.rs
