[package]
authors = ["Dylan Frankland <github@frankland.io>"]
edition = "2018"
name = "bleboard"
version = "0.1.0"
[dependencies]
bluster = "0.1.2"
crossbeam = "0.6.0"
futures = "0.1.25"
input = "0.4.1"
keycode = "0.1.1"
nix = "0.13.0"
systemstat = "0.1.3"
tokio = "1.7.1"
udev = "0.2.0"
uuid = "0.7.1"
